# llmedge

./: .dockerignore  .gitignore  .gitmodules  .prettierignore  CREDITS.md  LICENSE  README.md  gradle.properties  local.properties  mkdocs.yml  settings.gradle.kts
.github/: copilot-instructions.md
.github/scripts/: download_models.sh
.github/workflows/: ci.yml
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  tasks-template.md
docs/: architecture.md  contributing.md  examples.md  faq.md  index.md  installation.md  quirks.md  testing.md  usage.md  video-generation-api.md
llmedge/: build.gradle.kts  consumer-rules.pro
llmedge/src/androidTest/assets/test-models/: README.md
llmedge/src/androidTest/java/io/aatricks/llmedge/: BarkTtsAndroidE2ETest.kt  BaseVideoIntegrationTest.kt  FineTunedModelTest.kt  ImageGenerationE2ENativeTest.kt  ImageGenerationTest.kt  LLMEdgeCoreE2ETest.kt  ModelSwitchingTest.kt  ModelVariantTest.kt  PerformanceOptimizationTest.kt  VideoCancellationTest.kt  VideoGenerationE2ETest.kt  VideoGenerationTest.kt  VideoMemoryRegressionTest.kt  VideoProgressCallbackTest.kt  VideoReproducibilityTest.kt  WanVideoE2ETest.kt  WanVideoFullStackTest.kt  WanVideoSimpleTest.kt
llmedge/src/androidTest/java/io/aatricks/llmedge/huggingface/: HuggingFaceHubCacheTest.kt  HuggingFaceHubWanAssetsOnDiskTest.kt  WanModelRegistryAndroidTest.kt
llmedge/src/androidTest/java/io/shubham0204/smollm/: SmolLMTest.kt
llmedge/src/main/assets/wan-models/: model-registry.json
llmedge/src/main/cpp/: CMakeLists.txt  GGUFReader.cpp  LLMInference.cpp  LLMInference.h  bark_jni.cpp  sd_jni_internal.h  sdcpp_jni.cpp  smollm.cpp  whisper_jni.cpp
llmedge/src/main/java/io/aatricks/llmedge/: BarkTTS.kt  CpuTopology.kt  FlashAttentionHelper.kt  GGUFReader.kt  LLMEdgeManager.kt  ModelCache.kt  SmolLM.kt  SmolLMJavaCompat.kt  StableDiffusion.kt  Whisper.kt
llmedge/src/main/java/io/aatricks/llmedge/huggingface/: CustomDateSerializer.kt  HFEndpoints.kt  HFModelDownload.kt  HFModelInfo.kt  HFModelSearch.kt  HFModelTree.kt  HFModels.kt  HuggingFaceHub.kt  SystemDownload.kt  WanModelRegistry.kt
llmedge/src/main/java/io/aatricks/llmedge/rag/: EmbeddingProvider.kt  PDFReader.kt  RAGEngine.kt  TextSplitter.kt  VectorStore.kt
llmedge/src/main/java/io/aatricks/llmedge/util/: MemoryMetrics.kt
llmedge/src/main/java/io/aatricks/llmedge/vision/: ImageSource.kt  ImageUnderstanding.kt  ImageUtils.kt  LocalImageDescriber.kt  OcrEngine.kt  Projector.kt  SmolLMVisionAdapter.kt  VisionModelAnalyzer.kt
llmedge/src/main/java/io/aatricks/llmedge/vision/ocr/: MlKitOcrEngine.kt
llmedge/src/test/cpp/: CMakeLists.txt  sd_test_stubs.cpp  test_video_jni.cpp
llmedge/src/test/cpp/java/io/aatricks/llmedge/: NativeTestProgressCallback.java
llmedge/src/test/java/io/aatricks/llmedge/: BarkLinuxE2ETest.kt  BarkTTSTest.kt  BitmapConversionTest.kt  CombinedHeuristicTest.kt  FullPhonePathCatTest.kt  GGUFReaderTest.kt  GenerationMetricsTest.kt  GifEncoderTest.kt  ImageGenerationTest.kt  LLMEdgeManagerTest.kt  LoadingMethodsTest.kt  MemoryManagementTest.kt  MetadataInferenceTest.kt  MockStableDiffusionBridge.kt  MockStableDiffusionBridgeTest.kt  ReproductionTest.kt  SamplerSchedulerGifTest.kt  SchedulerConversionTest.kt  SmolLMDataClassesTest.kt  SmolLMInferenceTest.kt  SmolLMJavaCompatTest.kt  SmolLMLoadTest.kt  SmolLMMiscTest.kt  SmolLMResolveChatTemplateTest.kt  SmolLMThinkingModeTest.kt  StableDiffusionIntegrationTest.kt  StableDiffusionTxt2ImgTest.kt  StableDiffusionTxt2VidTest.kt  StableDiffusionVideoModelDetectorExtraTest.kt  StableDiffusionVideoTest.kt  TextInferenceLinuxE2ETest.kt  VideoGenerateParamsTest.kt  VideoGenerationExportTest.kt  VideoGenerationHQTest.kt  VideoGenerationLinuxE2ETest.kt  VideoGenerationSequentialE2ETest.kt  VideoGenerationTest.kt  VideoI2VAndLoraE2ETest.kt  VideoModelDetectorTest.kt  WanCatGifTask.kt  (+2 more)
llmedge/src/test/java/io/aatricks/llmedge/huggingface/: CustomDateSerializerTest.kt  HFEndpointsTest.kt  HFModelDownloadTest.kt  HFModelInfoTest.kt  HFModelSearchTest.kt  HFModelTreeSerializationTest.kt  HFModelsTest.kt  HuggingFaceHubCacheValidationTest.kt  HuggingFaceHubPickRepoFileTest.kt  HuggingFaceHubSanitizeTest.kt  HuggingFaceHubSelectFileTest.kt  WanModelRegistryTest.kt
llmedge/src/test/java/io/aatricks/llmedge/rag/: RAGTest.kt
llmedge/src/test/java/io/aatricks/llmedge/util/: MemoryMetricsTest.kt
llmedge/src/test/java/io/aatricks/llmedge/vision/: VisionTest.kt
mods/: conditioner.hpp  diffusion_model.hpp  ggml_extend.hpp  stable-diffusion.cpp  stable-diffusion.h  unet.hpp  util.cpp  vae.hpp  wan.hpp
mods/ggml/src/ggml-vulkan/vulkan-shaders/: vulkan-shaders-gen.cpp
scripts/: build_bark_linux.sh  build_sdcpp_linux.sh  build_smollm_linux.sh  build_whisper_linux.sh  run_linux_e2e.sh  run_linux_e2e_sequential.sh  run_text_e2e.sh  run_whisper_e2e.sh
scripts/jni-desktop/: CMakeLists.txt
specs/001-video-model-support/: build-verification.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-video-model-support/checklists/: requirements.md
specs/001-video-model-support/contracts/: jni-api.md  kotlin-api.md
